--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -20,6 +20,7 @@ android:orientation="vertical">
         android:focusableInTouchMode="true">
 
         <ImageView
+            android:id="@+id/img_back"
             android:layout_width="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
