--- a/app/src/main/res/layout/activity_buy_focus.xml
+++ b/app/src/main/res/layout/activity_buy_focus.xml
@@ -188,34 +188,83 @@
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/area">
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/circle_black" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                            android:includeFontPadding="false"
+                            android:text="서울"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+                    </RelativeLayout>
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
                         android:fontFamily="@font/notosansmonocjkkr_bold_cus"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:paddingBottom="20dp"
-                        android:text="서울"
+                        android:text="지역"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="70dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/amount">
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:layout_width="70dp"
+                                android:layout_height="wrap_content"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/circle_black" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                                android:includeFontPadding="false"
+                                android:text="12"
+                                android:textColor="@color/black"
+                                android:textSize="16sp" />
+                        </RelativeLayout>
+                    </LinearLayout>
 
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
                         android:fontFamily="@font/notosansmonocjkkr_bold_cus"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:paddingBottom="20dp"
-                        android:text="12"
+                        android:text="희망 구매갯수"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -223,8 +272,38 @@
                 <LinearLayout
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/deal">
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/circle_skyblue" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                            android:includeFontPadding="false"
+                            android:text="OK"
+                            android:textColor="@color/point_skyblue"
+                            android:textSize="30sp" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="안심거래"
+                        android:textColor="@color/point_skyblue"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </LinearLayout>
 
