--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:orientation="vertical">
+android:orientation="vertical"
+    android:background="@color/white">
 
 <TextView
     android:layout_width="match_parent"
@@ -57,25 +58,6 @@ android:orientation="vertical">
                 android:textSize="14sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/box">
-
-            <TextView
-                android:id="@+id/txt_mytxt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:background="@null"
-                android:gravity="center"
-                android:text="내가 쓴 글"
-                android:textColor="@color/text_gray"
-                android:textSize="14sp" />
-        </LinearLayout>
     </LinearLayout>
 
     <Button
